update todo list

--- a/bgeetextpack/TODO.txt
+++ b/bgeetextpack/TODO.txt
@@ -1,9 +1,11 @@
-To Fix
+ToDo:
+Replace:
 ? - возможно - пока согласовывается! Зентильская Твердыня -> крепость Зентил
 Муншае -> Муншаи (как Бермуды) склоняется пр. остров Муншаев
 Найти "Дорнал женился на" в обоих переводах (бг1 и бг2) и там прямо много имен поправить. + Возможно
 посмотреть другие книги вокруг - там куча имен и названий :( - может стоит заменить вообще все книги.
-
+всю географию (вместе с книгами) - после согласования географических терминов
+Возможно по итогам голосования Аянтис->Аджантис
 
 
 
